[package]
name = "vmm"
version = "0.1.0"
edition = "2021"
authors = ["aztecher <mikiyaf.business@gmail.com>"]
description = "ToyVMM is a project being developed for the purpose of learning virtualization technology"
license = "MIT"

[lib]
bench = false

[dependencies]
arrayvec = { version = "0.7.6", optional = true }
displaydoc = "0.2.5"
libc = "0.2.169"
scopeguard = "=1.2.0"
kvm-bindings = { version = "0.11.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.20.0"
vmm-sys-util = "0.12.1"
vm-memory = { version = "=0.16.1", features = ["backend-mmap", "backend-bitmap"] }
linux-loader = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
vm-superio = "0.8.0"
byteorder = "1.5.0"
nix = "0.29.0"
log = { version = "0.4.25", features = ["std", "serde"] }
gdbstub = { version = "0.7.0" , optional = true }
gdbstub_arch = { version = "0.3.0" , optional = true }

thiserror = "2"
derive_more = { version = "2", default-features = false, features = ["from", "display"] }

utils = { path = "../utils" }
zerocopy = { version = "0.8.24", features = ["alloc", "derive"] }

[features]
gdb = ["arrayvec", "gdbstub", "gdbstub_arch"]
